--- a/.gitignore
+++ b/.gitignore
@@ -139,9 +139,7 @@ dmypy.json
 # /shells/
 
 # some shells have sensitive info
-autoUploadPypi.sh
+myexpectupload.sh
 cdmysource.sh
 cdmydocker.sh
-
-
 
